Add void method
